--- a/src/pages/PlaceOrder/PlaceOrder.css
+++ b/src/pages/PlaceOrder/PlaceOrder.css
@@ -35,3 +35,10 @@
     width: 100%;
     max-width: max(40%, 500px);
 }
+
+
+@media (max-width: 750px) {
+    .place-order{
+        flex-direction: column;
+    }
+}
