update on counter ui in cart page

--- a/src/pages/Cart/Cart.css
+++ b/src/pages/Cart/Cart.css
@@ -28,7 +28,7 @@
 
 .cross > .food-item-counter{
     position: static;
-    /* transform: translateX(-10%); */
+    transform: translateX(-10%);
 }
 .cross > .food-item-counter > img{
     width: 30px;
