--- a/src/components/FoodDisplay/FoodDisplay.css
+++ b/src/components/FoodDisplay/FoodDisplay.css
@@ -15,3 +15,24 @@
     gap: 30px;
     row-gap: 50px;
 }
+
+.view-more-button-wrapper{
+    margin-top: 30px;
+}
+
+.view-more-button-wrapper button{
+    display: block;
+    border-radius: 50px;
+    border: none;
+    background-color: tomato;
+    padding: 15px 25px;
+    font-size: 16px;
+    font-weight: 500;
+    color: white;
+    margin: 0 auto;
+    transition: 0.5s ease;
+}
+
+.view-more-button-wrapper button:hover{
+    background-color: rgb(222, 72, 46);
+}
