--- a/src/pages/PlaceOrder/PlaceOrder.css
+++ b/src/pages/PlaceOrder/PlaceOrder.css
@@ -35,6 +35,25 @@
     width: 100%;
     max-width: max(40%, 500px);
 }
+.cart-payment-details{
+    margin-top: 22px;
+    /* border: 2px solid; */
+}
+
+.payment-details-input{
+    margin-top: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    /* border: 2px solid; */
+    height: 100%;
+}
+
+.payment-input{
+    display: flex;
+    gap: 10px;
+    padding: 10px 45px 10px 0;
+}
+
 
 
 @media (max-width: 750px) {
